SAKIII-4464 - Collections "New +" and close "X" buttons have focus color contrast issues

--- a/dev/css/sakai/sakai.base.css
+++ b/dev/css/sakai/sakai.base.css
@@ -266,7 +266,7 @@ a.s3d-button.s3d-overlay-button {display:inline-block;height:21px;line-height:21
 
 /* Overlay Action buttons */
 .s3d-button.s3d-overlay-action-button {background:url("/dev/images/button_overlay_action_default.png") repeat-x scroll left top transparent;font-size:11px;font-weight:bold;height:25px;margin-left:15px;box-shadow:0 1px 2px 0 #222;color:#fff;padding:0 5px;}
-.s3d-button.s3d-overlay-action-button:hover {background:url("/dev/images/button_overlay_action_hover.png") repeat-x scroll left top transparent;color:#22AAE7;}
+.s3d-button.s3d-overlay-action-button:hover, .s3d-button.s3d-overlay-action-button:focus {background:url("/dev/images/button_overlay_action_hover.png") repeat-x scroll left top transparent;color:#22AAE7;}
 .s3d-button.s3d-overlay-action-button:disabled {color:#ccc;}
 .s3d-button.s3d-overlay-action-button:disabled:hover {background:url("/dev/images/button_overlay_action_default.png") repeat-x scroll left top transparent;cursor:auto;}
 
